--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 .App {
-  text-align: center;
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
@@ -11,17 +13,6 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
@@ -35,4 +26,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
