Setup redux, changed local state to use redux global state for cart, header, and setup picture in homepage

--- a/src/components/shop-container/shop-container.styles.css
+++ b/src/components/shop-container/shop-container.styles.css
@@ -1,11 +1,9 @@
-.category-container {
+.shop-container {
     position: relative;
-    left: 50%;
     width: 75vw;
-    margin-left: -40vw;
 }
 
-.items {
+.shop-items {
     display: flex;
     flex-wrap: wrap;
 }
