--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
-  padding: 15px;
+  padding: 15px 10vw;
   display: flex;
   flex-direction: column;
-  color: darkgrey;
+}
+
+a {
+  text-decoration: none;
+  color: #424242;
 }
 
 /* .App-logo {
