--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
 .App {
-  padding: 15px 15vw;
+  padding: 20px 15%;
   display: flex;
   flex-direction: column;
-}
-
-h2, span {
   color: #424242;
+  font-size: 15px;
 }
 
 a {
   text-decoration: none;
   color: #424242;
 }
-
-/* .App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
