--- a/src/components/navigation/navigation.styles.css
+++ b/src/components/navigation/navigation.styles.css
@@ -4,6 +4,12 @@
     padding: 0px;
 }
 
+.nav--col ul {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
 .navigation li {
     list-style: none;
     margin: 0px 10px;
