Change styles and tag in partner component

--- a/src/components/partner-section/partner.styles.css
+++ b/src/components/partner-section/partner.styles.css
@@ -1,18 +1,17 @@
 .partner-section {
-    margin: 20px 0px 45px 0px;
-    position: relative;
-    left: -20px;
+    margin: 10px 0px 45px 0px;
+    text-align: center;
 }
 
 .partner-section h2 {
-    font-size: 25pt;
-    font-weight: normal;
-    text-align: center;
+    font-size: 30px;
+    font-weight: 500;
     margin-bottom: 30px;
 }
 
 .partner-section img {
-    max-width: 115px;
+    width: 110px;
+    height: auto;
     margin: 10px;
     filter: grayscale(100%);
     opacity: 0.5;
