--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,8 @@
 .App {
-  padding: 20px 15%;
-  display: flex;
-  flex-direction: column;
+  padding: 10px 15%;
   color: #424242;
   font-size: 15px;
+  justify-content: center;
 }
 
 a {
