--- a/src/components/custom-button/custom-button.styles.css
+++ b/src/components/custom-button/custom-button.styles.css
@@ -1,44 +1,25 @@
-/* ----------------------- */
-/* BUTTON STYLES */
-/* ----------------------- */
 .custom-btn {
-    background-color: #FFEC00;
+    background-color: #6DCD82;
     border: none;
-    display: flex;
-    text-align: center;
-    justify-content: center;
     height: 45px;
     padding: 0 15px;
-    margin: 5px 18px 5px 0;
+    color: white;
 }
 
 .custom-btn p {
     margin: auto;
 }
 
-.custom-btn img {
-    width: 15px;
-    margin: auto 0 auto 5px;
-}
-
-.custom-btn:hover {
-    background-color: #CDBD01;
-}
-
 .custom-btn:focus {
     outline: none;
 }
 
-/* ----------------------- */
-/* INVERTED BUTTON STYLES */
-/* ----------------------- */
-.btn--inverted {
+.btn--white {
+    text-transform: uppercase;
     background-color: white;
-    border: 1px solid rgb(19, 19, 19);
-}
-
-.btn--inverted:hover {
-    background-color: white;
-    border-color: #CDBD01;
-    color: #CDBD01
+    border: 1px solid black;
+    color: black;
+    opacity: 0.7;
+    visibility: hidden;
+    transition: visibility 0.2s;
 }
