--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -1,22 +1,31 @@
 .header {
-    padding: 10px 0px;
     display: flex;
     justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 /* ----------------------- */
 /* HEADER BRANDING */
 /* ----------------------- */
+.header__branding {
+    display: flex;
+    margin: 7px 0;
+}
 
 .header__branding img {
-    width: 120px;
-    height: auto;
+    width: 25px;
+    height: 25px;
+    margin-right: 8px;
+}
+
+.header__branding h2 {
+    color: #6DCD82;
+    margin: 0;
 }
 
 /* ----------------------- */
 /* HEADER NAV 1 */
 /* ----------------------- */
-
 .header__nav--1 {
     width: 40%;
 }
@@ -28,24 +37,23 @@
 
 .header__nav--1 a:link,
 .header__nav--1 a:visited {
-    font-size: 12px;
+    font-size: 15px;
     font-weight: 600;
-    padding-bottom: 3px;
+    padding-bottom: 5px;
     border-bottom: 2px solid transparent;
-
 }
 
 .header__nav--1 a:hover,
 .header__nav--1 a:active {
-    border-bottom: 2px solid #424242;
+    color: #6DCD82;
+    border-bottom: 2px solid #6DCD82;
 }
 
 /* ----------------------- */
 /* HEADER NAV 2 */
 /* ----------------------- */
-
 .header__nav--2 {
-    width: 20%;
+    width: 15%;
     display: flex;
 }
 
