--- a/src/components/section/section.styles.css
+++ b/src/components/section/section.styles.css
@@ -1,17 +1,29 @@
 .section {
     display: flex;
+    margin-bottom: 40px;
 }
 
-.section--col {
-    flex-direction: column;
+.section__img {
+    width: 400px;
+    height: auto;
+    margin: 0 30px 0 0;;
 }
 
-.section__text p {
+.section__info span {
     font-size: 15px;
 }
 
-.section__btns {
+.section__info .custom-btn {
     margin-top: 15px;
-    display: flex;
-    flex-direction: row;
+    min-width: fit-content;
+    width: 40%;
+}
+
+.end-with-pic img {
+    order: 2;
+    margin: 0 0 0 30px;
+}
+
+.end-with-pic .section__info {
+    text-align: right;
 }
