--- a/src/components/header/header.styles.css
+++ b/src/components/header/header.styles.css
@@ -55,6 +55,11 @@
 .header__nav--2 {
     width: 15%;
     display: flex;
+    margin-top: 10px;
+}
+
+.header__nav--2 a {
+    margin-right: 20px;
 }
 
 .header__nav--2 img {
