Created checkout-item component and complete increase and descrease cart item actions

--- a/src/components/cart-dropdown/cart-dropdown.styles.css
+++ b/src/components/cart-dropdown/cart-dropdown.styles.css
@@ -43,3 +43,11 @@
 .cart-dropdown .custom-btn {
     width: 100%;
 }
+
+.empty-message {
+    width: 100%;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
