--- a/src/pages/checkoutpage/checkoutpage.styles.css
+++ b/src/pages/checkoutpage/checkoutpage.styles.css
@@ -1,42 +1,24 @@
-.checkout__summary {
-    table-layout: fixed;
+.checkout__heading {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.checkout__summary th {
+.checkout__heading span {
+    text-align: center;
     color: #6DCD82;
     font-size: 17px;
     font-weight: 500;
 }
 
-.checkout__summary td {
-    width: 220px;
-    padding: 10px;
-    text-align: center;
+.checkout__list {
+    list-style: none;
+    padding: 0;
 }
 
-.item__desc {
+.empty-checkout-msg {
     display: flex;
-    flex-direction: column;
-}
-
-.item__desc span {
-    text-align: left;
-}
-
-.item__desc img {
-    width: 200px;
-    height: auto;
-    margin-bottom: 12px;
-}
-
-.item__quantity img {
-    position: relative;
-    top: 5px;
-    width: 20px;
-    height: auto;
-    margin-right: 15px;
-}
-
-.item__quantity input {
-    width: 50px;
+    width: 100%;
+    height: 300px;
+    align-items: center;
+    text-align: center;
 }
