Finish contact page with google map integration, clean up other error messages, complete hover and active nav underline and colouring

--- a/src/components/checkout-item/checkout-item.styles.css
+++ b/src/components/checkout-item/checkout-item.styles.css
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr 1fr 1fr 1fr;
     align-items: center;
     text-align: center;
-    margin: 25px 0;
+    margin: 15px 0;
 }
 
 .item__desc {
@@ -18,15 +18,25 @@
 .item__desc img {
     width: 200px;
     height: auto;
-    margin-bottom: 12px;
+    margin-bottom: 10px;
 }
 
-.item__quantity img {
-    position: relative;
-    top: 5px;
-    width: 20px;
+.item__quantity {
+    display: flex;
+    justify-content: center;
+}
+
+.item__quantity .clear-icon {
+    width: 18px;
     height: auto;
-    margin-right: 15px;
+}
+
+.item__quantity .update-icon {
+    position: relative;
+    width: 15px;
+    height: auto;
+    margin: 0 15px;
+    top: 3px;
 }
 
 .item__quantity input {
