--- a/src/pages/checkoutpage/checkoutpage.styles.css
+++ b/src/pages/checkoutpage/checkoutpage.styles.css
@@ -1,6 +1,8 @@
 .checkout__heading {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #6DCD82;
 }
 
 .checkout__heading span {
@@ -10,15 +12,32 @@
     font-weight: 500;
 }
 
-.checkout__list {
+.checkout__container {
+    text-align: right;
+}
+
+.container__list {
     list-style: none;
     padding: 0;
+    border-bottom: 1px solid #424242;
+    margin-bottom: 15px;
+}
+
+.container__summary {
+    font-weight: 600;
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 15px;
+}
+
+.checkout__container .custom-btn {
+    width: 200px;
 }
 
 .empty-checkout-msg {
     display: flex;
     width: 100%;
-    height: 300px;
+    height: 200px;
+    justify-content: center;
     align-items: center;
-    text-align: center;
 }
