Setup google signin, set user selector, and create welcome page

--- a/src/components/custom-button/custom-button.styles.css
+++ b/src/components/custom-button/custom-button.styles.css
@@ -1,18 +1,24 @@
 .custom-btn {
     background-color: #6DCD82;
-    border: none;
+    border: 1px solid white;
     height: 45px;
     padding: 0 20px;
     color: white;
     font-weight: 600;
+    transition: all 0.2s;
 }
 
 .custom-btn:focus {
     outline: none;
 }
 
+.btn--standard:hover {
+    background-color: white;
+    border: 1px solid #6DCD82;
+    color: #6DCD82;
+}
+
 .btn--white {
-    border-radius: 0;
     font-weight: 300;
     text-transform: uppercase;
     background-color: white;
