--- a/src/components/form-input/form-input.styles.css
+++ b/src/components/form-input/form-input.styles.css
@@ -6,7 +6,6 @@
 
 .form-input input {
     width: 250px;
-    margin: 10px 0;
     padding-bottom: 5px;
     border: none;
     border-bottom: 1px solid #424242;
@@ -15,4 +14,10 @@
 
 .form-input input:focus {
     outline-style: none;
+}
+
+.validation-error {
+    font-size: 10px;
+    margin-top: 5px;
+    color: red;
 }
