--- a/src/pages/orderpage/orderpage.styles.css
+++ b/src/pages/orderpage/orderpage.styles.css
@@ -1,10 +1,6 @@
 .orderpage {
     display: flex;
-}
-
-.shipping-address {
-    margin-bottom: 50px;
-    width: fit-content;
+    justify-content: center;
 }
 
 .orderpage h2 {
@@ -12,10 +8,31 @@
     margin: 0 0 30px 0;
 }
 
-.orderpage .form-input input {
+/* ---------------------------------- */
+/* Shipping and Payment Section       */
+/* ---------------------------------- */
+.orderpage .shipping-address,
+.payment-info {
+    margin-bottom: 50px;
+}
+
+.shipping-address input {
     text-align: left;
 }
 
+.test-credit-card {
+    border: 1px solid red;
+    padding: 15px;
+    margin-bottom: 20px;
+}
+
+.payment-info {
+    width: 380px;
+}
+
+/* ---------------------------------- */
+/* Purchase Order Summary             */
+/* ---------------------------------- */
 .summary-section {
     border: 1px solid #6DCD82;
     padding: 18px 35px;
