Setup server and client side communication successfully; create shipping in redux

--- a/client/src/components/address-container/address-container.styles.css
+++ b/client/src/components/address-container/address-container.styles.css
@@ -1,3 +1,13 @@
+.shipping-address {
+    margin-bottom: 50px;
+    text-align: left;
+}
+
+.shipping-address h2 {
+    font-size: 20px;
+    margin: 0 0 30px 0;
+}
+
 .address__province {
     display: flex;
     margin: 25px 0;
