--- a/client/src/components/payment-container/payment-container.styles.css
+++ b/client/src/components/payment-container/payment-container.styles.css
@@ -1,10 +1,12 @@
 .payment-container {
-    margin-bottom: 50px;
     width: 380px;
 }
 
+.payment-container h2 {
+    font-size: 20px;
+    margin: 0 0 30px 0;
+}
+
 .test-credit-card {
-    border: 1px solid red;
-    padding: 15px;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
 }
