--- a/client/src/components/custom-button/custom-button.styles.css
+++ b/client/src/components/custom-button/custom-button.styles.css
@@ -27,6 +27,10 @@
     opacity: 0.7;
     visibility: hidden;
     transition: visibility 0.2s;
+    width: 80%;
+    align-self: center;
+    position: relative;
+    top: -70px;
 }
 
 .btn-google {
