--- a/client/src/pages/productpage/productpage.styles.css
+++ b/client/src/pages/productpage/productpage.styles.css
@@ -23,3 +23,20 @@
 .product__col--2 p {
     margin: 0 0 30px 0;
 }
+
+.product__col--2 .custom-btn{
+    margin-bottom: 20px;
+}
+
+@media screen and (max-width: 768px) {
+    .product-container {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .product__col--1 img {
+        width: 300px;
+        margin-bottom: 30px;
+    }
+}
