--- a/client/src/pages/checkoutpage/checkoutpage.styles.css
+++ b/client/src/pages/checkoutpage/checkoutpage.styles.css
@@ -34,3 +34,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 411px) {
+    .checkout__heading {
+        display: none;
+    }
+}
