--- a/client/src/pages/sign-in-up-page/sign-in-up-page.styles.css
+++ b/client/src/pages/sign-in-up-page/sign-in-up-page.styles.css
@@ -1,13 +1,24 @@
 .social-acct-signinup {
     display: flex;
     flex-direction: column;
-    border-bottom: 1px solid #6DCD82;
-    width: 350px;
     padding-bottom: 20px;
+    margin: 0 auto;
+}
+
+.signinup-divider {
+    width: 350px;
+    height: 1px;
+    background-color:  #6DCD82;
     margin: 0 auto;
 }
 
 .social-acct-signinup .custom-btn {
     width: 220px;
     margin: 5px auto;
+}
+
+@media screen and (max-width: 414px) {
+    .signinup-divider {
+        width: 250px;
+    }
 }
