--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,9 +3,20 @@
   color: #424242;
   font-size: 15px;
   justify-content: center;
+  height: fit-content;
 }
 
 a {
   text-decoration: none;
   color: #424242;
+}
+
+.screen {
+  background-color: #6c6a6a20;
+  width: 100%;
+  height: 100%;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
