--- a/client/src/components/checkout-item/checkout-item.styles.css
+++ b/client/src/components/checkout-item/checkout-item.styles.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     margin-bottom: 20px;
+    width: 200px;
 }
 
 .item__desc div {
@@ -21,9 +22,9 @@
 }
 
 .item__desc img {
+    margin-bottom: 10px;
     width: 200px;
     height: auto;
-    margin-bottom: 10px;
 }
 
 .item__quantity {
