--- a/client/src/components/form-input/form-input.styles.css
+++ b/client/src/components/form-input/form-input.styles.css
@@ -1,6 +1,7 @@
 .form-input {
     display: flex;
     margin: 10px 0;
+    line-height: 20px;
 }
 
 .input__label {
@@ -29,4 +30,10 @@
     font-size: 10px;
     margin-top: 5px;
     color: red;
+}
+
+@media screen and (max-width: 414px) {
+    .form-input {
+        flex-direction: column;
+    }
 }
