--- a/client/src/components/order-success-container/order-success-container.styles.css
+++ b/client/src/components/order-success-container/order-success-container.styles.css
@@ -36,3 +36,9 @@
     width: 170px;
     margin-left: auto;
 }
+
+@media screen and (max-width: 414px) {
+    .success-modal {
+        width: 200px;
+    }
+}
