--- a/client/src/components/order-success-modal/order-success-modal.styles.css
+++ b/client/src/components/order-success-modal/order-success-modal.styles.css
@@ -1,18 +1,9 @@
-.order-success-container {
-    background-color: #6c6a6a20;
-    width: 100%;
-    height: 100%;
-    z-index: 2;
-    position: absolute;
-    top: 0;
-    left: 0;
-}
-
 .success-modal {
     border: 1px solid #424242;
     width: 350px;
     height: fit-content;
-    position: relative;
+    position: absolute;
+    z-index: 2;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
@@ -40,5 +31,6 @@
 @media screen and (max-width: 414px) {
     .success-modal {
         width: 200px;
+        top: 10%;
     }
 }
