--- a/client/src/components/form-input/form-input.styles.css
+++ b/client/src/components/form-input/form-input.styles.css
@@ -20,6 +20,7 @@
     border: none;
     border-bottom: 1px solid #424242;
     text-align: center;
+    border-radius: 0;
 }
 
 .form-input input:focus {
